Fix z-index issues with record and user fields

--- a/src/themes/corteza-base/custom.scss
+++ b/src/themes/corteza-base/custom.scss
@@ -67,6 +67,10 @@ th {
   }
 }
 
+.vs__dropdown-menu {
+  z-index: 1090;
+}
+
 .vs__dropdown-toggle {
   padding: 0.375rem;
   border-width: 2px;
